# tiralabra

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: maarittelydokumentti.md  testaus.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md
src/: converter.py  main.py  trie.py  ukkonooatesti.txt
src/data/: testsong.txt
src/tests/: converter_test.py  trie_test.py
