[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["isabel <isabel.suorsa@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.2"
invoke = "^2.2.0"
pylint = "^2.17.5"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
